force-app/main/default/objects/Subscription__c/fields/Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Message__c</fullName>
    <defaultValue>&quot;Press &#39;Save&#39; if you do.&quot;</defaultValue>
    <label>Do you confirm the subscription?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>