force-app/main/default/objects/Subscription__c/fields/Is_Current_User_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_Subscriber__c</fullName>
    <formula>$User.Id  =  User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Subscriber?</label>
    <type>Checkbox</type>
</CustomField>