force-app/main/default/objects/Subscription__c/listViews/My_Subscriptions.listView-meta.xml
<ListView>
    <fullName>My_Subscriptions</fullName>
    <filterScope>Everything</filterScope>
    <label>My Subscriptions</label>
    <columns>Channel__c</columns>
    <filters>
        <field>Is_Current_User_Subscriber__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
</ListView>